[package]
name = "openusd"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/mxpv/openusd"
license-file = "LICENSE"
exclude = ["/vendor"]
description = "Rust native USD library"
categories = ["graphics", "rendering", "rendering::data-formats"]
keywords = ["usd", "usda", "usdc", "usdz", "pxr"]

[features]
serde = ["dep:serde", "half/serde"]

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.0", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
lz4_flex = "0.13.0"
num-traits = "0.2.17"
half = { version = "2.3.1", features = ["bytemuck", "num-traits"] }
logos = "0.16.0"
serde = { version = "1", features = ["derive"], optional = true }
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
