[package]
name = "openusd"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/mxpv/openusd"
license = "MIT"
license-file = "LICENSE"
exclude = ["/vendor", "/fixtures", "/docs", "/.github", "/.claude"]
description = "Rust native USD library"
categories = ["graphics", "rendering", "rendering::data-formats"]
keywords = ["usd", "usda", "usdc", "usdz", "pxr"]

[features]
geom = []
# UsdLux lights are UsdGeom Xformable / Boundable prims, so the lux views
# build on the geom schema traits.
lux = ["geom"]
# UsdMediaSpatialAudio is a UsdGeomXformable-derived prim, so the media views
# build on the geom schema traits.
media = ["geom"]
physics = []
# UsdProcGenerativeProcedural is a UsdGeomBoundable-derived prim, so the proc
# views build on the geom schema traits.
proc = ["geom"]
render = []
shade = []
# UsdSkelRoot and UsdSkelSkeleton are UsdGeomBoundable-derived prims, so the
# skel views build on the geom schema traits.
skel = ["geom"]
ui = []
# UsdVolVolume is a UsdGeomGprim and the field prims are UsdGeomXformable, so
# the vol views build on the geom schema traits.
vol = ["geom"]
serde = ["dep:serde", "half/serde"]

[dependencies]
anyhow = "1.0.79"
bitflags = "2.11.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2"
lz4_flex = "0.14.0"
num-traits = "0.2.17"
half = { version = "2.3.1", features = ["bytemuck", "num-traits"] }
logos = "0.16.0"
serde = { version = "1", features = ["derive"], optional = true }
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut", "add", "add_assign", "mul", "mul_assign", "not", "sum", "from"] }

[dev-dependencies]
diff_json = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[[test]]
name = "text_format"
required-features = ["serde"]

[[test]]
name = "text_writer_roundtrip"
required-features = ["serde"]

[[test]]
name = "binary_writer_roundtrip"
required-features = ["serde"]

[[test]]
name = "cross_format_roundtrip"
required-features = ["serde"]

[[test]]
name = "physics_reader"
required-features = ["physics"]

[[test]]
name = "skel_reader"
required-features = ["skel"]

[[test]]
name = "geom_reader"
required-features = ["geom"]

[[test]]
name = "lux_reader"
required-features = ["lux"]

[[test]]
name = "shade_reader"
required-features = ["shade"]

[[test]]
name = "render_reader"
required-features = ["render"]

[[test]]
name = "ui_reader"
required-features = ["ui"]

[[test]]
name = "vol_reader"
required-features = ["vol"]

[[test]]
name = "media_reader"
required-features = ["media"]

[[test]]
name = "proc_reader"
required-features = ["proc"]
